Implemented global event queue with event-callback connections
 - Widget events don't run through canvas and window callbacks anymore
 - Widget events get posted to internal event queue
 - Window events use callback but also get posted to internal queue
 - Connections can be registered to link certain events to callback
   calls (signals & slots style)
 - Centralized queue is locked, events can be added from any thread
 - queue gets processed in main thread

Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -24,6 +24,7 @@ endif( )
 
 
 set( CORE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/canvas.c
+              ${CMAKE_CURRENT_SOURCE_DIR}/src/event.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/filesystem.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/font_cache.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/mem_canvas.c
