Implemented read/write access to platform clipboard
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -16,8 +16,10 @@ endif( )
 add_executable( demo demo.c )
 add_executable( signalsandslots signalsandslots.c )
 add_executable( simple simple.c )
+add_executable( clipboard clipboard.c )
 
 target_link_libraries( demo sgui )
 target_link_libraries( signalsandslots sgui )
 target_link_libraries( simple sgui )
+target_link_libraries( clipboard sgui )
 
