--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -27,6 +27,7 @@ set( CORE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/canvas.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/event.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/filesystem.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/font_cache.c
+              ${CMAKE_CURRENT_SOURCE_DIR}/src/icon_cache.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/mem_canvas.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/mem_pixmap.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/pixmap.c
