Added basic icon view widget
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/widgets/CMakeLists.txt
+++ b/widgets/CMakeLists.txt
@@ -8,6 +8,7 @@ set( WIDGETS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/button.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/edit_box.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/frame.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/group_box.c
+                 ${CMAKE_CURRENT_SOURCE_DIR}/src/icon_view.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/image.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/progress_bar.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/scroll_bar.c
