Added emergency message box function that uses platform functions
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/dialogs/CMakeLists.txt
+++ b/dialogs/CMakeLists.txt
@@ -5,6 +5,7 @@
 #--------------------------------------------------------------------
 
 set( DIALOGS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/messagebox.c
-
+                 ${CMAKE_CURRENT_SOURCE_DIR}/src/messagebox_w32.c
+                 ${CMAKE_CURRENT_SOURCE_DIR}/src/messagebox_x11.c
      PARENT_SCOPE )
 
