--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -19,6 +19,7 @@ elseif( WIN32 )
        ${CMAKE_CURRENT_SOURCE_DIR}/src/WIN32/opengl.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/WIN32/platform.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/WIN32/direct3d9.c
+       ${CMAKE_CURRENT_SOURCE_DIR}/src/WIN32/direct3d11.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/WIN32/window.c )
 endif( )
 
