--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -8,9 +8,11 @@ if( OPENGL )
   add_executable( gl0 gl0.c )
   add_executable( gl1 gl1.c )
   add_executable( gl2 gl2.c )
+  add_executable( gl3 gl3.c )
   target_link_libraries( gl0 sgui )
   target_link_libraries( gl1 sgui )
   target_link_libraries( gl2 sgui )
+  target_link_libraries( gl3 sgui )
 endif( )
 
 if( WIN32 AND DIRECT3D9 )
