Added Direct3D sub view widget samples
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -18,15 +18,23 @@ endif( )
 if( WIN32 AND DIRECT3D9 )
   add_executable( d3d9_0 d3d9_0.c )
   add_executable( d3d9_1 d3d9_1.c )
+  add_executable( d3d9_2 d3d9_2.c )
+  add_executable( d3d9_3 d3d9_3.c )
   target_link_libraries( d3d9_0 sgui )
   target_link_libraries( d3d9_1 sgui )
+  target_link_libraries( d3d9_2 sgui )
+  target_link_libraries( d3d9_3 sgui )
 endif( )
 
 if( WIN32 AND DIRECT3D11 )
   add_executable( d3d11_0 d3d11_0.c )
   add_executable( d3d11_1 d3d11_1.c )
+  add_executable( d3d11_2 d3d11_2.c )
+  add_executable( d3d11_3 d3d11_3.c )
   target_link_libraries( d3d11_0 sgui d3dcompiler_43 )
   target_link_libraries( d3d11_1 sgui d3dcompiler_43 )
+  target_link_libraries( d3d11_2 sgui d3dcompiler_43 )
+  target_link_libraries( d3d11_3 sgui d3dcompiler_43 )
 endif( )
 
 add_executable( demo demo.c )
