Made the doxygen documentation 1000% more awesome
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -38,14 +38,14 @@ if( WIN32 AND DIRECT3D11 )
 endif( )
 
 add_executable( demo demo.c )
-add_executable( signalsandslots signalsandslots.c )
+add_executable( events events.c )
 add_executable( simple simple.c )
 add_executable( clipboard clipboard.c )
 add_executable( widget widget.c )
 add_executable( dialogs dialogs.c )
 
 target_link_libraries( demo sgui )
-target_link_libraries( signalsandslots sgui )
+target_link_libraries( events sgui )
 target_link_libraries( simple sgui )
 target_link_libraries( clipboard sgui )
 target_link_libraries( widget sgui )
