Fixed icon cache NOP implementations
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,13 @@ option( OPENGL "Compile with OpenGL(R) support" ON )
 option( NOFLOAT "Disable all use of floatingpoint data types" OFF )
 option( MESSAGEBOX "Compile with message box dialog" ON )
 option( NATIVE_MB "Compile with native emergency message box function" ON )
-option( ICONCACHE "Compile with icon cache object" ON )
+
+if( UNIX )
+  set( ICONCACHE true )
+else( )
+  option( ICONCACHE "Compile with icon and font cache implementations" ON )
+endif( )
+
 option( ICONVIEW "Compile with icon view widget" ON )
 option( SUBVIEW "Compile with sub view widget" ON )
 option( TABS "Compile with tab widget" ON )
