[cleanup] seperated numeric edit box from edit box
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/widgets/CMakeLists.txt
+++ b/widgets/CMakeLists.txt
@@ -17,6 +17,7 @@ set( WIDGETS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/button.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/tab.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/slider.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/pass_box.c
+                 ${CMAKE_CURRENT_SOURCE_DIR}/src/numeric_edit.c
 
      PARENT_SCOPE )
 
