--- a/widgets/CMakeLists.txt
+++ b/widgets/CMakeLists.txt
@@ -18,6 +18,7 @@ set( WIDGETS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/button.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/slider.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/pass_box.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/numeric_edit.c
+                 ${CMAKE_CURRENT_SOURCE_DIR}/src/color_picker.c
 
      PARENT_SCOPE )
 
