Added small OpenGL texture canvas example
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -9,10 +9,16 @@ if( OPENGL )
   add_executable( gl1 gl1.c )
   add_executable( gl2 gl2.c )
   add_executable( gl3 gl3.c )
+  add_executable( texcanvas texcanvas.c )
   target_link_libraries( gl0 sgui )
   target_link_libraries( gl1 sgui )
   target_link_libraries( gl2 sgui )
   target_link_libraries( gl3 sgui )
+  target_link_libraries( texcanvas sgui sguisubwm )
+
+  if( UNIX )
+    target_link_libraries( texcanvas m )
+  endif( )
 endif( )
 
 if( WIN32 AND DIRECT3D9 )
