--- a/subwm/CMakeLists.txt
+++ b/subwm/CMakeLists.txt
@@ -6,6 +6,9 @@
 
 set( SUBWM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/tex_canvas.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/gl_canvas.c
+               ${CMAKE_CURRENT_SOURCE_DIR}/src/gl_wm.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d9_canvas.c
+               ${CMAKE_CURRENT_SOURCE_DIR}/src/ctx_window.c
+               ${CMAKE_CURRENT_SOURCE_DIR}/src/ctx_wm.c
      PARENT_SCOPE )
 
