[fix] Fixed project description
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/lib" )
 set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/bin" )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/bin" )
 
-set( PROJECT_BRIEF "A collection of tools and utillities for C programs" )
+set( PROJECT_BRIEF "A small, simple gui library implemented in plain C89" )
 set( PROJECT_VERSION "alpha" )
 
 #----------------------------------------------------------------------
