[cleanup] Add common base class for dialogs
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/dialogs/CMakeLists.txt
+++ b/dialogs/CMakeLists.txt
@@ -8,5 +8,6 @@ set( DIALOGS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/messagebox.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/messagebox_w32.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/messagebox_x11.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/src/color_dialog.c
+                 ${CMAKE_CURRENT_SOURCE_DIR}/src/dialog.c
      PARENT_SCOPE )
 
