Add icon runlength compression & conversion tool
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -51,3 +51,5 @@ target_link_libraries( clipboard sgui )
 target_link_libraries( widget sgui )
 target_link_libraries( dialogs sgui )
 
+add_executable( sguiicon sguiicon.c )
+
