Add D3D9 ctx_wm stub
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/subwm/CMakeLists.txt
+++ b/subwm/CMakeLists.txt
@@ -4,6 +4,10 @@
 # the public domain.
 #--------------------------------------------------------------------
 
+if( WIN32 AND DIRECT3D9 )
+  set( SUBWM_OS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d9_wm.c )
+endif( )
+
 set( SUBWM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/tex_canvas.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/gl_canvas.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/gl_wm.c
@@ -11,5 +15,6 @@ set( SUBWM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/tex_canvas.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/ctx_window.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/ctx_wm.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/skin.c
+               ${SUBWM_OS_SRC}
      PARENT_SCOPE )
 
