[fix] distinction between Unix-like and OS X in build system
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,6 +185,7 @@ if( WIN32 )
     message( STATUS "Compiling for 32 bit Windows" )
   endif( )
 elseif( APPLE )
+  set( SGUI_OSX 1 )
   message( ERROR "Mac OS X is not supported yet!" )
 elseif( UNIX )
   set( SGUI_UNIX 1 )
@@ -229,7 +230,7 @@ else( )
   set( SGUI_DEP ${SGUI_DEP} ${CMAKE_THREAD_LIBS_INIT} )
 endif( )
 
-if( UNIX )
+if( UNIX AND NOT APPLE )
   find_package( Freetype REQUIRED )
   set( SGUI_DEP ${SGUI_DEP} ${FREETYPE_LIBRARIES} )
   include_directories( ${FREETYPE_INCLUDE_DIRS} )
@@ -324,7 +325,7 @@ if( WIN32 )
                      WORKING_DIRECTORY ${CMAKE_BINARY_DIR} )
 endif( )
 
-if( UNIX )
+if( UNIX AND NOT APPLE )
   install( DIRECTORY core/include DESTINATION include )
   install( DIRECTORY widgets/include DESTINATION include )
   install( DIRECTORY dialogs/include DESTINATION include )
