Implement Direct3D 11 texture canvas stub
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -40,10 +40,12 @@ if( WIN32 AND DIRECT3D11 )
   add_executable( d3d11_1 d3d11_1.c )
   add_executable( d3d11_2 d3d11_2.c )
   add_executable( d3d11_3 d3d11_3.c )
+  add_executable( texcanvas_d3d11 texcanvas_d3d11.c )
   target_link_libraries( d3d11_0 sgui d3dcompiler_43 )
   target_link_libraries( d3d11_1 sgui d3dcompiler_43 )
   target_link_libraries( d3d11_2 sgui d3dcompiler_43 )
   target_link_libraries( d3d11_3 sgui d3dcompiler_43 )
+  target_link_libraries( texcanvas_d3d11 sgui sguisubwm d3dcompiler_43 )
 endif( )
 
 add_executable( demo demo.c )
