--- a/subwm/CMakeLists.txt
+++ b/subwm/CMakeLists.txt
@@ -5,13 +5,14 @@
 #--------------------------------------------------------------------
 
 if( WIN32 AND DIRECT3D9 )
-  set( SUBWM_OS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d9_wm.c )
+  set( SUBWM_OS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d9_canvas.c
+                    ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d11_canvas.c
+                    ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d9_wm.c )
 endif( )
 
 set( SUBWM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/tex_canvas.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/gl_canvas.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/gl_wm.c
-               ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d9_canvas.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/ctx_window.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/ctx_wm.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/skin.c
